PR c++/80227 - SFINAE and negative array size.

* decl.c (compute_array_index_type): Use
	build_converted_constant_expr and valid_constant_size_p.

From-SVN: r258604